# robot-invasion-defence-2

./: .env  .env.test  .gitignore  README.md  README_FI.md  tasks.py
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
robot-tower-defence-2/: .coveragerc  pyproject.toml  tasks.py
robot-tower-defence-2/dokumentaatio/: arkkitehtuuri.md  changelog.md  credits.md  kayttoliittymaluonnos.excalidraw  kayttoohje.md  luokkadiagrammi.md  testaus.md  tuntikirjanpito.md  vaatimusmaarittely.md
robot-tower-defence-2/src/: main.py
robot-tower-defence-2/src/data/: test.db
robot-tower-defence-2/src/data/arenas/: GrassFields.tsx  grass_fields.tmx  plants.tsx  puita.tsx
robot-tower-defence-2/src/game/: game.py  map.py  particle.py  player.py  projectile.py  robot.py  round_manager.py  tower.py  ui.py
robot-tower-defence-2/src/game/arenas/: GRASS_FIELDS.py  __init__.py  arenas.py  grass_fields.py
robot-tower-defence-2/src/game/map/: map.py
robot-tower-defence-2/src/game/player/: player.py
robot-tower-defence-2/src/game/robot/: robot.py
robot-tower-defence-2/src/game/robots/: __init__.py  archie.py  mech.py  minx.py  nathan.py
robot-tower-defence-2/src/game/tower/: tower.py  turret.py
robot-tower-defence-2/src/game/towers/: __init__.py  cannon.py  missile_launcher.py  turret.py
robot-tower-defence-2/src/game/ui/: hud.py  sidebar.py  ui.py
robot-tower-defence-2/src/game/ui_components/: tower_button.py
robot-tower-defence-2/src/menu/: menu.py
robot-tower-defence-2/src/resources/arenas/: grass_fields.tmx  peaky_mountains.tmx  terrain.tsx
robot-tower-defence-2/src/tests/: map_test.py  robot_test.py  tower_test.py
robot-tower-defence-2/src/ui/: game_ui.py  menu.py  ui.py
robot-tower-defence-2/src/ui/components/: icon_button.py  menu_button.py  start_game_button.py  tower_button.py
robot-tower-defence-2/src/ui/menus/: __init__.py  lose_menu.py  main_menu.py  pause_menu.py  start_game_menu.py
robot-tower-defence-2/src/utils/: IMAGES.py  SETTINGS.py  config.py  db.py  file_reader.py  logger.py  math.py  round_generator.py  sheet_reader.py  text.py
(+39 files in other folders)
