[tool.poetry]
name = "robot-tower-defence-2"
version = "0.1.0"
description = "Awesome Tower Defence game!"
authors = ["3nd3r1 <ender.spam.guru@gmail.com>"]
readme = "README.md"
packages = [{include = "robot_tower_defence_2"}]

[tool.poetry.dependencies]
python = "^3.8"
pygame = "^2.3.0"
pytmx = "^3.31"
invoke = "^2.0.0"


[tool.poetry.dev-dependencies]
pylint = "^2.17.1"
autopep8 = "^2.0.2"
pytest = "^7.2.2"
coverage = "^7.2.2"

[build-system]
requires = ["poetry-core>=1.4.0"]
build-backend = "poetry.core.masonry.api"

